--- a/myteam-multi-page-website/package.json
+++ b/myteam-multi-page-website/package.json
@@ -15,16 +15,16 @@
     "start": "cross-env NODE_OPTIONS=--no-deprecation next start"
   },
   "dependencies": {
-    "@payloadcms/db-mongodb": "beta",
-    "@payloadcms/next": "beta",
-    "@payloadcms/plugin-cloud": "beta",
-    "@payloadcms/plugin-form-builder": "beta",
-    "@payloadcms/richtext-lexical": "beta",
-    "@payloadcms/storage-s3": "beta",
+    "@payloadcms/db-mongodb": "3.0.0-beta.95",
+    "@payloadcms/next": "3.0.0-beta.95",
+    "@payloadcms/plugin-cloud": "3.0.0-beta.95",
+    "@payloadcms/plugin-form-builder": "3.0.0-beta.95",
+    "@payloadcms/richtext-lexical": "3.0.0-beta.95",
+    "@payloadcms/storage-s3": "3.0.0-beta.95",
     "cross-env": "^7.0.3",
     "graphql": "^16.9.0",
     "next": "15.0.0-canary.104",
-    "payload": "beta",
+    "payload": "3.0.0-beta.95",
     "react": "19.0.0-rc-06d0b89e-20240801",
     "react-dom": "19.0.0-rc-06d0b89e-20240801",
     "react-hook-form": "^7.53.0",
@@ -37,7 +37,7 @@
     "autoprefixer": "^10.4.20",
     "eslint": "^8.57.0",
     "eslint-config-next": "15.0.0-canary.104",
-    "postcss": "^8.4.43",
+    "postcss": "^8.4.44",
     "tailwindcss": "^3.4.10",
     "typescript": "5.5.4"
   },
